Updates for MessageHub GA

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+encoding//node_modules/message-hub-rest/lib/utils.js=UTF-8
 encoding//themes/analytics/_vars.styl=UTF-8
