--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "bunyan": "^1.3.2",
     "c3": "^0.4.10",
     "cfenv": "*",
-    "cf-deployment-tracker-client": "0.0.7",
+    "cf-deployment-tracker-client": "^0.x",
     "cloudant": "^1.0.0",
     "cookie-parser": "~1.3.5",
     "d3": "<=3.5.0",
